[tool.poetry]
name = "pykeyboardmelee"
version = "0.1.0"
description = ""
authors = ["Alex Brockunier <brockuniera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
keyboard = "^0.13.5"
vgamepad = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
